Prevent the flickering of the bookmark bar

--- a/XUL_Hide_the_bookmark_bar_automatically.user.css
+++ b/XUL_Hide_the_bookmark_bar_automatically.user.css
@@ -2,9 +2,11 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 #main-window:not([customizing="true"]) #PersonalToolbar {
   visibility: collapse !important;
+  transition: visibility 0.1s step-end !important;
 }
 
 #main-window:not([customizing="true"]) #nav-bar:hover ~ #PersonalToolbar,
 #main-window:not([customizing="true"]) #PersonalToolbar:hover {
   visibility: visible !important;
+  transition: none !important;
 }
